--- a/blogs/blogstyles.css
+++ b/blogs/blogstyles.css
@@ -28,12 +28,6 @@ body {
   color: rgb(4, 4, 45);
 }
 
-.container {
-  max-width: 1000px;
-  /* Set a maximum width for your container */
-  margin: 0 auto;
-  /* Center the container horizontally */
-}
 
 h1 {
   font-size: calc(1.61803398875 * 2em);
@@ -101,7 +95,7 @@ p {
 }
 
 
-i.fa-brands.fa-square-facebook {
+/* i.fa-brands.fa-square-facebook {
   color: var(--fb-bg);
 }
 
@@ -122,7 +116,7 @@ i.fab.fa-linkedin {
 i.fab.fa-github {
   color: var(--git-color);
 }
-
+ */
 
 a {
   text-decoration: none;
