--- a/styles.css
+++ b/styles.css
@@ -25,12 +25,6 @@ body {
   color: #040434;
 }
 
-.container {
-  max-width: 1000px;
-  /* Set a maximum width for your container */
-  margin: 0 auto;
-  /* Center the container horizontally */
-}
 
 h1 {
   font-size: calc(1em + 1.61803398875vw);
@@ -126,14 +120,14 @@ p {
 }
 
 /* span navbar */
-.fa-facebook-f {
+/* .fa-facebook-f {
   border: 1px solid black;
   border-radius: 50%;
 
 }
 
-i.fa-brands.fa-square-facebook {
-  color: var(--fb-bg);
+i.fa-brands.fa-facebook-f:hover {
+  color: var(--btn-bg);
 }
 
 i.fab.fa-twitter {
@@ -152,7 +146,7 @@ i.fab.fa-linkedin {
 
 i.fab.fa-github {
   color: var(--git-color);
-}
+} */
 
 .introduction {
   background-color: #3f5bd7;
